fix text overflows

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -119,11 +119,13 @@ main {
         }
 
         a {
-            display: flex;
+            display: grid;
+            grid-template: auto / $entry-size auto;
             text-decoration: none;
             color: inherit;
             padding: $entry-padding;
             align-items: center;
+            overflow: hidden;
 
             img {
                 width: $entry-size;
@@ -135,15 +137,21 @@ main {
                 display: flex;
                 flex-direction: column;
                 padding: 0 0 0 $entry-padding;
+                overflow: hidden;
+                white-space: nowrap;
 
                 .title-block-title {
                     font-size: 1rem;
                     line-height: 1.25rem;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
 
                 .title-block-url {
                     font-size: .8rem;
                     opacity: .5;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
             }
         }
